--- a/order-services/pom.xml
+++ b/order-services/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.order.service</groupId>
-	<artifactId>order-service</artifactId>
+	<artifactId>order-services</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>order-service</name>
+	<name>order-services</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
