--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
   application:
-    name: user-service   # must match config-repo file
+    name: user-service        # must match config-repo file name
   profiles:
-    active: dev                  # 👈 environment (dev / test / prod)
+    active: dev               # dev / test / prod
   config:
     import: optional:configserver:http://localhost:8888
+
+logging:
+  level:
+    root: INFO
+    com.yourpackage: DEBUG
